# polipo

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  example_cache.json
.github/workflows/: rust.yml  test.yml
docs/: business-requirements.md  cache-implementation.md  n8n-flow.md  technical-requirements.md
scripts/: binary.sh
src/: cache.rs  config.rs  email.rs  lib.rs  main.rs  scheduler.rs
src/octopus/: client.rs  models.rs
