[package]
name = "polipo"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = ["json", "cookies"] }
tokio = { version = "1.52.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
scraper = "0.26.0"
regex = "1.12.3"
lettre = "0.11.21"
cron_tab = { version = "0.2.13", features = ["async"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
log = "0.4.29"
env_logger = "0.11.10"
chrono = { version = "0.4.44", features = ["serde"] }
openssl = { version = "0.10.78", features = ["vendored"] }

[dev-dependencies]
tempfile = "3.27.0"
